--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@ h1#heading {
 /* media query */
 @media (max-width: 576px) {
   h1#heading {
-    font-size: 30px;
+    font-size: 25px;
   }
 }
 
@@ -246,20 +246,21 @@ margin: 50px 10px;
   padding-bottom: 50%;
 }
 
-.card::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.3); /* Black shade */
-  transition: background-color 0.5s ease;
-  z-index: 1;
-}
+  .card::before {
+    /* content: ''; */
+    /* color: white; */
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(22, 40, 181, 0.389) !important; /* Black shade */
+    transition: background-color 0.5s ease;
+    z-index: 1;
+  }
 
 .card:hover::before {
-  background-color: rgba(0, 0, 0, 0);
+  background-color: rgba(30, 0, 255, 0) !important;
 }
 
 .card:hover img {
@@ -453,4 +454,19 @@ background-color: rgb(0, 102, 0);
   transition: 0.3s;
 }
 
+#btn-deploma{
+  font-size: 20px;
+  margin-top: 16%;
+  padding: 5px 20px;
+  border-radius: 30px;
+  background: none; /* Removed !important */
+  border: 2px solid white;
+  color: white;
+}
 
+#btn-deploma:hover{
+  background-color: rgb(177, 255, 255);
+  border: 2px solid black;
+  color: black;
+  
+}
