--- a/src/App.css
+++ b/src/App.css
@@ -470,3 +470,9 @@ background-color: rgb(0, 102, 0);
   color: black;
   
 }
+
+/* @media screen(max-width: 480px) {
+  #para{
+    font-size:'10px'
+  }
+} */
