--- a/src/App.css
+++ b/src/App.css
@@ -3,15 +3,23 @@
 /* body {
   background-color: #eee
 } */
+
+*{
+  padding: 0;
+  margin: 0;
+}
 #img-boat {
+  /* margin-top: 0; */
+  /* padding-top: 0; */
+  margin: 0;
   width: 100%;
-  height: 500px;
+  height: 600px;
   background-position: center;
   background-size: cover;
   background-image: url(./assets/maritime_img.jpg);
   background-attachment: fixed;
   position: relative; /* Ensure the container is positioned relative */
-  z-index: 0; /* Ensure the background stays at the back */
+  z-index: 0c; /* Ensure the background stays at the back */
 }
 
 #img-boat::before {
@@ -85,9 +93,10 @@ h1#heading {
   /* color: aliceblue; */
 /* } */
 .button {
-  background-color: aqua;
+  background-color: rgb(0, 55, 255);
   border: none;
   color: white;
+  border-radius: 10px;
   padding: 10px 30px;
   /* margin-right:55px !important; */
   text-align: center;
@@ -99,9 +108,9 @@ h1#heading {
   cursor: pointer;
 }
 .button:hover{
-  border: 2px solid aqua;
-  background-color: white;
-  color: aqua;
+  border: 2px solid rgb(0, 55, 255);
+  background-color: rgb(195, 199, 223);
+  color: rgb(255, 255, 255);
   transition: 0.3s;
 }
 .button-footer{
