button bug fixed

--- a/src/App.css
+++ b/src/App.css
@@ -94,7 +94,7 @@ h1#heading {
 /* } */
 .button {
   background-color: rgb(0, 55, 255);
-  border: none;
+  border: 3px solid rgb(0, 55, 255);
   color: white;
   border-radius: 10px;
   padding: 10px 30px;
@@ -108,14 +108,15 @@ h1#heading {
   cursor: pointer;
 }
 .button:hover{
-  border: 2px solid rgb(0, 55, 255);
-  background-color: rgb(195, 199, 223);
+  border: 3px solid rgb(0, 55, 255);
+  /* background-color: rgba(48, 48, 48, 0); */
+  background: none;
   color: rgb(255, 255, 255);
   transition: 0.3s;
 }
 .button-footer{
   background-color: aqua;
-  border: none;
+  border: 2px solid aqua;
   color: rgb(41, 41, 41);
   padding: 10px 30px;
   /* margin-right:55px !important; */
@@ -136,7 +137,8 @@ h1#heading {
 .button-about{
   /* justify-content: center; */
   background-color: aqua;
-  border: none;
+  border: 2px solid aqua;
+  /* border: none; */
   color: rgb(41, 41, 41);
   padding: 10px 30px;
   /* margin-right:55px !important; */
@@ -222,6 +224,7 @@ margin: 50px 10px;
 
 #download{
   margin-top: 70px;
+  border: 2px solid aqua;
   /* padding: 10px; */
   padding-top: 15px;
   padding-bottom: 10px;
@@ -397,10 +400,10 @@ border-radius: 50%;
 #sign-btn{
   /* width:200px
   height : 45px */
-  /* border:'none */
+  border: 3px solid aqua;
   width: 200px;
   height: 45px;
-  border: none;
+  /* border: none; */
   background-color: aqua;
   font-weight: bold;
   transition: 0.3s;
