all buttons bugs fixed

--- a/src/App.css
+++ b/src/App.css
@@ -450,7 +450,7 @@ background-color: rgb(0, 102, 0);
 
 
 .maritime{
-  border: none;
+  border: 2px solid aqua;
   background-color: aqua;
   padding: 10px 30px;
   font-size: 20px;
