--- a/src/App.css
+++ b/src/App.css
@@ -98,7 +98,7 @@ h1#heading {
   color: white;
   border-radius: 10px;
   padding: 10px 30px;
-  /* margin-right:55px !important; */
+  margin-top:30px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
